# Hello-CMake

./: CMakeLists.txt  explanation.txt
